--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "magnum"]
 	path = magnum
-	url = https://github.com/openstack/magnum.git
+	url = https://github.com/Centrinix/openstack-magnum.git
