--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
       with:
         images: |
           ghcr.io/centrinix/heat-container-agent
+        flavor: |
+          latest=false
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
